--- a/Intercode.Toolbox.Core/Intercode.Toolbox.Core.csproj
+++ b/Intercode.Toolbox.Core/Intercode.Toolbox.Core.csproj
@@ -22,6 +22,8 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageTags>streams;strings;threading;assemblies;integer encoding;uribuilder;variable integer encoding;embedded resources;AOT;trim-compatible</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/eddievelasquez/IntercodeToolbox</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
     <IncludeSymbols>True</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <Deterministic>true</Deterministic>
