Extracted the Template Engine from TypedPrimitives to a standalone package
Code cleanup and multiple optimizations.

--- a/Intercode.Toolbox.TemplateEngine.Benchmarks/Intercode.Toolbox.TemplateEngine.Benchmarks.csproj
+++ b/Intercode.Toolbox.TemplateEngine.Benchmarks/Intercode.Toolbox.TemplateEngine.Benchmarks.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Intercode.Toolbox.Core\Intercode.Toolbox.Core.csproj" />
+    <ProjectReference Include="..\Intercode.Toolbox.TemplateEngine\Intercode.Toolbox.TemplateEngine.csproj" />
   </ItemGroup>
 
 </Project>
