--- a/Intercode.Toolbox.TypedPrimitives/Intercode.Toolbox.TypedPrimitives.csproj
+++ b/Intercode.Toolbox.TypedPrimitives/Intercode.Toolbox.TypedPrimitives.csproj
@@ -51,6 +51,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Templates\System.DateTimeOffset\NewtonsoftJsonConverter.template" />
     <EmbeddedResource Include="TypedPrimitiveAttribute.cs" />
   </ItemGroup>
 
@@ -61,6 +62,7 @@
     <EmbeddedResource Include="Templates\Common\SystemTextJsonConverter.template" />
     <EmbeddedResource Include="Templates\Common\NewtonsoftJsonConverter.template" />
     <EmbeddedResource Include="Templates\Common\EFCoreValueConverter.template" />
+    <EmbeddedResource Include="Templates\System.DateTime\NewtonsoftJsonConverter.template" />
     <EmbeddedResource Include="Templates\System.Guid\PrimitiveType.ValueType.template" />
     <EmbeddedResource Include="Templates\System.String\PrimitiveType.ReferenceType.template" />
     <EmbeddedResource Include="Templates\System.Uri\PrimitiveType.ReferenceType.template" />
