Added benchmarks for the TemplateCompiler
micro-optimizations and disable DATAS to avoid skewing the performance
now that it is enabled by default in .NET 9.0

--- a/Intercode.Toolbox.TemplateEngine.Benchmarks/Properties/launchSettings.json
+++ b/Intercode.Toolbox.TemplateEngine.Benchmarks/Properties/launchSettings.json
@@ -2,7 +2,10 @@
   "profiles": {
     "TemplateEngine.Benchmarks": {
       "commandName": "Project",
-      "commandLineArgs": "--filter *"
+      "commandLineArgs": "--filter *",
+      "environmentVariables": {
+        "DOTNET_GCDynamicAdaptationMode": "0"
+      }
     }
   }
 }
