Bug Fix: The EF Value converters were not properly supporting nullable fields
An invalid operation exception was thrown when the primitive had no
value, which happens when the table column is nullable and will have
no value.

--- a/Intercode.Toolbox.TypedPrimitives/Intercode.Toolbox.TypedPrimitives.csproj
+++ b/Intercode.Toolbox.TypedPrimitives/Intercode.Toolbox.TypedPrimitives.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -52,6 +52,8 @@
 
   <ItemGroup>
     <EmbeddedResource Include="Templates\System.DateTimeOffset\NewtonsoftJsonConverter.template" />
+    <EmbeddedResource Include="Templates\System.String\EFCoreValueConverter.template" />
+    <EmbeddedResource Include="Templates\System.Uri\EFCoreValueConverter.template" />
     <EmbeddedResource Include="TypedPrimitiveAttribute.cs" />
   </ItemGroup>
 
