Refactor value checks in converters
Updated to use HasValue instead of IsDefault, and GetValueOrDefault() instead of ValueOrDefault as these will be deprecated in a future version.

--- a/Intercode.Toolbox.TypedPrimitives/Templates/Common/SystemTextJsonConverter.template
+++ b/Intercode.Toolbox.TypedPrimitives/Templates/Common/SystemTextJsonConverter.template
@@ -52,7 +52,7 @@ public partial class $TypedPrimitiveName$SystemTextJsonConverter: global::System
     $TypedPrimitiveQualifiedName$ value,
     global::System.Text.Json.JsonSerializerOptions options )
   {
-    if ( value.IsDefault )
+    if ( !value.HasValue )
     {
       writer.WriteNullValue();
       return;
