--- a/Intercode.Toolbox.TypedPrimitives/Templates/System.DateTime/NewtonsoftJsonConverter.template
+++ b/Intercode.Toolbox.TypedPrimitives/Templates/System.DateTime/NewtonsoftJsonConverter.template
@@ -76,7 +76,7 @@ public partial class $TypedPrimitiveName$NewtonsoftJsonConverter: global::Newton
       throw new global::Newtonsoft.Json.JsonSerializationException( $$"Unexpected object type: {value.GetType().Name}" );
     }
 
-    if( s.IsDefault )
+    if( !s.HasValue )
     {
       writer.WriteNull();
       return;
