--- a/Intercode.Toolbox.TypedPrimitives/Templates/Common/EFCoreValueConverter.template
+++ b/Intercode.Toolbox.TypedPrimitives/Templates/Common/EFCoreValueConverter.template
@@ -13,7 +13,7 @@ public class $TypedPrimitiveName$ValueConverter: global::Microsoft.EntityFramewo
   public $TypedPrimitiveName$ValueConverter(
     global::Microsoft.EntityFrameworkCore.Storage.ValueConversion.ConverterMappingHints? mappingHints = null )
     : base(
-      primitive => !primitive.IsDefault ? primitive.Value : default,
+      typedPrimitive => typedPrimitive.HasValue ? typedPrimitive.Value : default,
       value => ( $TypedPrimitiveQualifiedName$ ) value,
       mappingHints
     )
