--- a/Intercode.Toolbox.TypedPrimitives/Templates/Common/NewtonsoftJsonConverter.template
+++ b/Intercode.Toolbox.TypedPrimitives/Templates/Common/NewtonsoftJsonConverter.template
@@ -61,7 +61,7 @@ public partial class $TypedPrimitiveName$NewtonsoftJsonConverter: global::Newton
       throw new global::Newtonsoft.Json.JsonSerializationException( $$"Unexpected object type: {value.GetType().Name}" );
     }
 
-    if( s.IsDefault )
+    if( !s.HasValue )
     {
       writer.WriteNull();
       return;
